# photree

./: .gitignore  CLAUDE.md  README.md  migrate-albums.py  mise.toml  pyproject.toml  renovate.json
.github/workflows/: check-links.yml  demo.yml  publish-test.yml  publish.yml  release.yml  test.yml
build-scripts/: clidocs.py  depgraph.py
demo/: demo.cast  demo.sh  record-demo.sh
docs/: architecture.md  building-and-testing.md  cli-reference.md  concepts.md  config-reference.md  features.md  guidelines.md  implementation-checklists.md  installation.md  internals.md  releasing-and-publishing.md  setup-development-environment.md  usage.md
docs/config-examples/: config.toml
photree/: __init__.py  base58.py  config.py  fsprotocol.py  gallery.py  uiconventions.py
photree/album/: __init__.py  browsable.py  combined.py  exif.py  fixes.py  id.py  integrity.py  ios_fixes.py  jpeg.py  live_photo.py  media.py  media_ops.py  naming.py  optimize.py  output.py  preflight.py  refresh.py  stats.py
photree/album/check/: __init__.py  browsable.py  dir_structure.py  exif_cache_state.py  face_state.py  ios.py  jpeg.py  (+8 more)
photree/albums/: __init__.py  index.py  media_index.py  renamer.py
photree/check/: __init__.py
photree/cli/: __init__.py  album_cmd.py  albums_cmd.py  app.py  batch_ops.py  check_cmd.py  console.py  demo_cmd.py  export_cmd.py  gallery_cmd.py  gallery_ops.py  import_cmd.py  progress.py
photree/clicommons/: options.py  progress.py
photree/clihelpers/: __init__.py  console.py  options.py  progress.py
photree/collection/: __init__.py  check.py  id.py  naming.py
photree/collections/: __init__.py
photree/common/: exif.py  formatting.py  fs.py  parallelism.py  sips.py
photree/config/: __init__.py  loader.py  protocol.py
photree/demo/: __init__.py
photree/exporter/: __init__.py  export.py  export_all.py  output.py
photree/fs/: __init__.py  fileutils.py  ios.py  media.py  protocol.py  repo.py
photree/gallery/: __init__.py  batch_rename.py  browsable_refresh.py  collection_refresh.py  import_plan.py  importer.py  index.py  output.py  renamer.py
photree/importer/: __init__.py  image_capture.py  image_capture_all.py  output.py  preflight.py
tests/: test_cli.py  test_config.py  test_gallery.py  test_metadata.py
tests/album/: test_browsable.py  test_combined.py  test_exif.py  test_exporter_export.py  test_exporter_export_batch.py  test_importer_image_capture.py  test_importer_image_capture_batch.py  test_integrity.py  test_ios_fixes.py  test_media_ops.py  test_naming.py  test_optimize.py  test_stats.py
tests/cli/: test_album_init.py  test_cli.py
tests/collection/: test_id.py  test_metadata.py  test_naming.py
tests/config/: test_config.py
tests/exporter/: test_export.py  test_export_all.py
tests/fs/: test_metadata.py
tests/gallery/: test_importer.py
tests/importer/: test_album_import.py  test_image_capture.py  test_image_capture_all.py  test_preflight.py  test_testkit.py
tests/integration_fs/: conftest.py  test_demo_workflow.py
(+235 files in other folders)
