[project]
name = "photree"
description = "Manage photos in a directory tree"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sami Dalouche", email = "sami.dalouche@gmail.com" }]
dependencies = [
  "typer (>=0.24.0,<1.0.0)",
  "platformdirs (>=4.0,<5.0)",
  "mermaid-ascii-diagrams (>=0.1.1)",
  "pyexiftool (>=0.5.0,<1.0.0)",
  "pydantic (>=2.12.5,<3.0.0)",
  "pyyaml (>=6.0,<7.0)",
  "uuid6 (>=2024.7.10,<2026.0.0)",
  "insightface (>=0.7,<1.0)",
  "onnxruntime (>=1.16,<2.0)",
  "opencv-python-headless (>=4.8,<5.0)",
  "numpy (>=1.26,<3.0)",
  "faiss-cpu (>=1.13,<2.0)",
  "scikit-learn (>=1.4,<2.0)",
]
dynamic = ["version"]

[tool.poetry]
packages = [{ include = "photree" }]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[project.scripts]
photree = "photree.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"
pyright = "^1.1"
pytest = "^9.0.0"
vermin = "^1.8.0"
pydeps = {version = ">=3.0.2", python = ">=3.12,<4.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
markers = [
    "integration_fs: filesystem integration tests (full workflow)",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",  # FAISS SWIG bindings
]

[tool.pyright]
pythonVersion = "3.12"

[virtualenvs]
# works jointly with mise to ensure the correct Python version is used in the virtualenv
in-project = true
